framec_tests/language_specific/java/v3_mir/positive/transition_inline_block_comment.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $B() /* comment ok */
            }
        }
        $B {
        }
}
