framec_tests/language_specific/java/v3_mir/negative/unbalanced_parens.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $B(1, (2, 3)
            }
        }
}

